# gbemu

./: .gitignore  CMakeLists.txt
include/: SM83.h  chead.h  common.h  joypad.h  ppu.h  registers.h  serial.h  timer.h
include/misc/: queue.h
roms/: Tetris (Japan) (En).gb:Zone.Identifier  Zelda no Densetsu - Yume o Miru Shima (Japan).gb:Zone.Identifier  compile_cartridge.txt
roms/testroms/: RLRR.asm  arithmetic.asm  carryDAACPLINCDEC16ADD16.asm  compile.py  cpincdec.asm  jp.asm  ldh.asm  logical.asm  memcpy.asm  shift_bit.asm  test.asm  testserial.asm
src/: SM83.c  chead.c  headerCodes.c  main.c  serial.c  timer.c
src/PPUbackend/: sdl.c
src/SM83backends/: MI.c  naive.c
src/joypadbackend/: sdl.c
src/misc/: queue.c
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  queuetest  queuetest.c
tests/Testing/Temporary/: CTestCostData.txt
